feat: basic client

--- a/basic_client/Makefile
+++ b/basic_client/Makefile
@@ -1,9 +1,13 @@
 CC=gcc
-CFLAGS=-Wall -Wextra -pedantic -std=c99 -ggdb
+CFLAGS=-Wall -Wextra -Werror -pedantic -std=c99 -ggdb
 CPPFLAGS= -D_GNU_SOURCE
 
-all: basic_client.o
+all: basic_client 
+
+basic_client: basic_client.o
 	$(CC) $^
+
+
 
 clean:
 	$(RM) a.out vgcor* *.o
